fix: fix the alignment issue between input box and description/unit value for the step input component. (#2280)
* fix: move hard coded style from ngx to  style to fix the allignment issue between input box and description.

* fix: move hard coded style from ngx to  style to fix the allignment issue between input box and description [ci visual]

* fix:reusing the fd-flex-vertical-center mixins [ci visual]

--- a/src/step-input.scss
+++ b/src/step-input.scss
@@ -84,6 +84,10 @@ $block: #{$fd-namespace}-step-input;
     }
   }
 
+  &__container {
+    @include fd-flex-vertical-center();
+  }
+
   /** Width is different due to different border width  */
   &.is-information,
   &.is-error,
